--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@ __pycache__
 messages.db
 model.json
 .env
-Documento de Entrenamiento ChatGPT para WhatsApp M2M.docx
+Documento de Entrenamiento ChatGPT para WhatsApp M2M - BRCO (Versión Optimizada para IA).docx
 chunks.json
 faiss.index
 
